--- a/client.html
+++ b/client.html
@@ -63,22 +63,13 @@
     }
     </style>
   <div class="topnav">
-    <a class="active" href="index.html">Home</a>
-    <a href="client.html">my private client</a>
+    <a href="index.html">Home</a>
+    <a class="active" href="client.html">my private client</a>
     <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
     <a href="amoguns.html">Private Exploits</a>
     <a href="discord.html">deezcord</a>
 
-  </div>
-  <header>
-    <div class="container">
-      <a id="a-title">
-        <h1 class="p1">i did this in a day</h1>
-        <h1 class="p1">totally not a skid</h1>
-        <p class="p1">pls dont hurt me aston</p>
-      </section>
-    </div>
-  </header>
+    <h1 class="p1">i havent made it yet pls bare wiht me</h1>
 
 
 
