--- a/discord.html
+++ b/discord.html
@@ -63,28 +63,35 @@
     }
     </style>
   <div class="topnav">
-    <a class="active" href="index.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="client.html">my private client</a>
     <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
     <a href="amoguns.html">Private Exploits</a>
-    <a href="discord.html">deezcord</a>
-
-  </div>
-  <header>
-    <div class="container">
-      <a id="a-title">
-        <h1 class="p1">i did this in a day</h1>
-        <h1 class="p1">totally not a skid</h1>
-        <p class="p1">pls dont hurt me aston</p>
-      </section>
-    </div>
-  </header>
-
-
-
-
-
-
-
+    <a class="active" href="discord.html">deezcord</a>
+    <br>
+    <br>
+    <br>
+    <br>
+    <header>
+        <table>
+            <tr>
+                <td>
+                    <h1>duper trooper discord:</h1>
+                </td>
+                <td>
+                    <a href="https://discord.gg/wmkmVkwhr2">https://discord.gg/wmkmVkwhr2</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <h1>joe swanson's discord</h1>
+                </td>
+                <td>
+                    <a href="https://discord.gg/J9DejYh64K">https://discord.gg/J9DejYh64K</a>
+                </td>
+            </tr>
+        </table>
+        
+    </header>  
 </body>
 </html>
