--- a/abt me.html
+++ b/abt me.html
@@ -66,35 +66,27 @@
     <a href="index.html">Home</a>
     <a href="client.html">my private client</a>
     <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
-    <a href="abt me.html">About me</a>
-    <a class="active" href="discord.html">deezcord</a>
+    <a class="active" href="abt me.html">about me</a>
+    <a href="discord.html">deezcord</a>
     <a href="crash.html">crash</a>
-    </div>
+
+
+  </div>
+  <header>
     <div class="container">
-        <header>
-            <br>
-            <br>
-            <br>
-            <br>
-                <table>
-                    <tr>
-                        <td>
-                            <h1>duper trooper discord:</h1>
-                        </td>
-                        <td>
-                            <a href="https://discord.gg/wmkmVkwhr2">https://discord.gg/wmkmVkwhr2</a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>
-                            <h1>joe swanson's discord</h1>
-                        </td>
-                        <td>
-                            <a href="https://discord.gg/J9DejYh64K">https://discord.gg/J9DejYh64K</a>
-                        </td>
-                    </tr>
-                </table>
-        </header>
+      <a id="a-title">
+        <h1 class="p1">My discord tag is @DivineEssentia#7124</h1>
+        <h1 class="p1">i play minecaft</h1>
+        <h1 class="p1"><a href="https://bigrat.monster"></a>bigrat.monster</h1>
+      </section>
     </div>
+  </header>
+
+
+
+
+
+
+
 </body>
 </html>
