--- a/client.html
+++ b/client.html
@@ -37,7 +37,7 @@
     }
     .topnav {
       overflow: hidden;
-      background-color: rgba(41, 41, 41, 0);
+      background-color: white;
     }
     
     .topnav a {
@@ -66,14 +66,16 @@
     <a href="index.html">Home</a>
     <a class="active" href="client.html">my private client</a>
     <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
-    <a href="amoguns.html">Private Exploits</a>
+    <a href="abt me.html">about me</a>
     <a href="discord.html">deezcord</a>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <h1 class="p1">i havent made it yet pls bare wiht me</h1>
+    <a href="crash.html">crash</a>
+  </div>
+  <br>
+  <br>
+  <br>
+  <br>
+  <br>
+  <h1 class="p1">i havent made it yet pls bear with me</h1>
 
 
 
