--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     }
     .topnav {
       overflow: hidden;
-      background-color: rgba(41, 41, 41, 0);
+      background-color: white;
     }
     
     .topnav a {
@@ -66,8 +66,9 @@
     <a class="active" href="index.html">Home</a>
     <a href="client.html">my private client</a>
     <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
-    <a href="amoguns.html">Private Exploits</a>
+    <a href="abt me.html">about me</a>
     <a href="discord.html">deezcord</a>
+    <a href="crash.html">crash</a>
 
   </div>
   <header>
