--- a/abt me.html
+++ b/abt me.html
@@ -64,7 +64,7 @@
     </style>
   <div class="topnav">
     <a href="index.html">Home</a>
-    <a href="client.html">my private client</a>
+    <a href="client.html">client</a>
     <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
     <a class="active" href="abt me.html">about me</a>
     <a href="discord.html">deezcord</a>
@@ -77,7 +77,7 @@
       <a id="a-title">
         <h1 class="p1">My discord tag is @DivineEssentia#7124</h1>
         <h1 class="p1">i play minecaft</h1>
-        <h1 class="p1"><a href="https://bigrat.monster"></a>bigrat.monster</h1>
+        <h1 class="p1"><a href="https://bigrat.monster">bigrat.monster</a></h1>
       </section>
     </div>
   </header>
