--- a/client.html
+++ b/client.html
@@ -64,7 +64,7 @@
     </style>
   <div class="topnav">
     <a href="index.html">Home</a>
-    <a class="active" href="client.html">my private client</a>
+    <a class="active" href="client.html">heck client</a>
     <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
     <a href="abt me.html">about me</a>
     <a href="discord.html">deezcord</a>
@@ -75,7 +75,6 @@
   <br>
   <br>
   <br>
-  <h1 class="p1">i havent made it yet pls bear with me</h1>
-
+  <h1 class="p1">frollge</h1>
 </body>
 </html>
