--- a/discord.html
+++ b/discord.html
@@ -45,7 +45,7 @@
       color: #858585;
       text-align: center;
       padding: 14px 16px;
-      text-decoration: none;
+      text-decoration: none;    
       font-size: 17px;
       font-weight: bold;
     }
@@ -64,7 +64,7 @@
     </style>
     <div class="topnav">
         <a href="index.html">Home</a>
-        <a href="client.html">my private client</a>
+        <a href="client.html">client</a>
         <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
         <a href="abt me.html">About me</a>
         <a class="active" href="discord.html">deezcord</a>
