--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </style>
   <div class="topnav">
     <a class="active" href="index.html">Home</a>
-    <a href="client.html">my private client</a>
+    <a href="client.html">client</a>
     <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
     <a href="abt me.html">about me</a>
     <a href="discord.html">deezcord</a>
@@ -80,12 +80,5 @@
       </section>
     </div>
   </header>
-
-
-
-
-
-
-
 </body>
 </html>
