--- a/client.html
+++ b/client.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <link rel="icon" type="image/png" href="download.png">
+  <link rel="icon" type="image/png" href="no.jpeg">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#00FFDF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="sus.css">
-  <title>mongus</title>
-  
+  <title>hecks</title>  
   </style>
 </head>
 <body data-new-gr-c-s-check-loaded="14.1029.0" data-gr-ext-installed="">
@@ -19,7 +18,7 @@
       margin: 0;
       font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: white;
-      background-image: url('download.png');
+      background-image: url('bac.jpeg');
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
@@ -65,7 +64,7 @@
   <div class="topnav">
     <a href="index.html">Home</a>
     <a class="active" href="client.html">heck client</a>
-    <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
+    <a href="https://grabify.link/6D6ROG">Doupe for 2bt2</a>
     <a href="abt me.html">about me</a>
     <a href="discord.html">deezcord</a>
     <a href="crash.html">crash</a>
