add moar funnies
fuck the pc

--- a/client.html
+++ b/client.html
@@ -74,6 +74,6 @@
   <br>
   <br>
   <br>
-  <h1 class="p1">frollge</h1>
+  <h1 class="p1"><a href="https://www.mediafire.com/file/pznayee2y9sh7nh/divineclient.jar/file">divine's private client</a></h1>
 </body>
 </html>
