--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </style>
 </head>
 <body data-new-gr-c-s-check-loaded="14.1029.0" data-gr-ext-installed="">
+  <embed src="doot.mp3" autostart="true" width="20" height="20"></embed>
 
   <style>
 
@@ -74,9 +75,9 @@
   <header>
     <div class="container">
       <a id="a-title">
-        <h1 class="p1">i did this in a day</h1>
-        <h1 class="p1">totally not a skid</h1>
-        <p class="p1">pls dont hurt me aston</p>
+        <h1 class="p1">If you're here for a hacked client for 1.17.1,</h1>
+        <h1 class="p1">you're in the right place. </h1>
+        <p class="p1">(definatly not a skid)</p>
       </section>
     </div>
   </header>
