--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
   <link rel="stylesheet" href="sus.css">
   <title>mongus</title>
   <style>
-    body {
-      font-family: "Lato", sans-serif;
-    }
+     body {
+      margin: 0;
+      font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: white;
+      background-image: url('bac.jpeg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-attachment: fixed;
+     }
     
     .sidenav {
       height: 100%;
