--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">Home</a>
     <a href="client.html">client</a>
-    <a href="https://grabify.link/6D6ROG">Doupe for 2bt2</a>
+    <a href="https://grabify.link/6D6ROG">Dupe for all versions of mc</a>
     <a href="abt me.html">about me</a>
-    <a href="discord.html">deezcord</a>
-    <a href="crash.html">crash</a>
+    <a href="discord.html">Discord stuff</a>
+    <a href="crash.html">Crash exploit</a>
   </div>
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
 
