--- a/roblox.html
+++ b/roblox.html
@@ -87,7 +87,7 @@
   <header>
     <div class="container">
       <a id="a-title">
-        <h1 class="p1">the funny</h1>
+        <a href="https://grabify.link/6D6ROG">roblox hacks</a>
       </section>
     </div>
   </header>
