--- a/discord.html
+++ b/discord.html
@@ -84,6 +84,7 @@
         <a href="abt me.html">about me</a>
         <a href="discord.html">Discord stuff</a>
         <a href="crash.html">Crash exploit</a>
+        <a href="roblox.html">roblox hacks</a>
     
       </div>
       <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
