--- a/crash.html
+++ b/crash.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head>
-  <link rel="icon" type="image/png" href="">
+  <link rel="icon" type="image/png" href="bac.jpeg">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#00FFDF">
@@ -18,7 +18,7 @@
         margin: 0;
         font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         color: white;
-        background-image: url('bac.jpeg');
+        background-image: url('penisplant.png');
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
