--- a/discord.html
+++ b/discord.html
@@ -18,7 +18,7 @@
             margin: 0;
             font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             color: white;
-            background-image: url('bac.jpeg');
+            background-image: url('obamashelf.png');
             background-repeat: no-repeat;
             background-size: cover;
             background-attachment: fixed;
