obama shelf update
oooobaaamaaa shellff

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="container">
       <a id="a-title">
         <h1 class="p1">the funny</h1>
-        <h1 class="p1">oahhhh obama shelf</h1>
+        <h1 class="p1">obama shelf</h1>
       </section>
     </div>
   </header>
