--- a/discord.html
+++ b/discord.html
@@ -79,7 +79,7 @@
         </script>
       <div id="mySidenav" class="sidenav">
         <a href="index.html">Home</a>
-        <a href="client.html">heck client</a>
+        <a href="client.html">heck client</a>x
         <a href="https://grabify.link/6D6ROG">dupe for all versions of mc</a>
         <a href="abt me.html">about me</a>
         <a href="discord.html">Discord stuff</a>
@@ -100,7 +100,7 @@
                             <h1>duper trooper discord:</h1>
                         </td>
                         <td>
-                            <a href="https://discord.gg/wmkmVkwhr2">https://discord.gg/wmkmVkwhr2</a>
+                            <a href="https://discord.gg/xinabox">https://discord.gg/xinabox</a>
                         </td>
                     </tr>
                     <tr>
