--- a/client.html
+++ b/client.html
@@ -24,7 +24,7 @@
       background-attachment: fixed;
   }
   
-  .sidenav {
+  .funnynav {
       height: 100%;
       width: 0;
       position: fixed;
@@ -37,7 +37,7 @@
       padding-top: 60px;
   }
   
-  .sidenav a {
+  .funnynav a {
       padding: 8px 8px 8px 32px;
       text-decoration: none;
       font-size: 25px;
@@ -46,11 +46,11 @@
       transition: 0.3s;
   }
   
-  .sidenav a:hover {
+  .funnynav a:hover {
       color: #949494;
   }
   
-  .sidenav .closebtn {
+  .funnynav .closebtn {
       position: absolute;
       top: 0;
       right: 250px;
@@ -59,8 +59,8 @@
   }
   
   @media screen and (max-height: 450px) {
-      .sidenav {padding-top: 15px;}
-      .sidenav a {font-size: 18px;}
+      .funnynav {padding-top: 15px;}
+      .funnynav a {font-size: 18px;}
   }
   </style>
 </head>
@@ -70,14 +70,14 @@
   </audio>
   <script>
   function openNav() {
-      document.getElementById("mySidenav").style.width = "250px";
+      document.getElementById("susnav").style.width = "250px";
   }
   
   function closeNav() {
-      document.getElementById("mySidenav").style.width = "0";
+      document.getElementById("susnav").style.width = "0";
   }
   </script>
-<div id="mySidenav" class="sidenav">
+<div id="susnav" class="funnynav">
   <a href="index.html">Home</a>
   <a href="client.html">Client</a>
   <a href="https://grabify.link/6D6ROG">Dupe for all versions of mc</a>
