--- a/abt me.html
+++ b/abt me.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#00FFDF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="sus.css">
+  <link rel="stylesheet" href="style.css">
   <title>mongus</title>
   
   </style>
@@ -58,6 +58,7 @@
         margin-left: 50px;
     }
     
+    
     @media screen and (max-height: 450px) {
         .funnynav {padding-top: 15px;}
         .funnynav a {font-size: 18px;}
@@ -89,12 +90,12 @@
   </div>
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
   <header>
-    <div class="container">
+    <div class="text">
       <a id="a-title">
-        <h1 class="p1" style="text-align: center;">My discord tag is @DivineEssentia#7124</h1>
-        <h1 class="p1" style="text-align:center;">i play minecaft</h1>
-        <h4 class="p1" style="text-align:center;">Programming langs i know:<br>Python<br>html<br></h4>
-        <h4 class="h4" style="text-align:center;"></h4>
+        <h1 style="text-align: center;">My discord tag is @DivineEssentia#7124</h1>
+        <h1 style="text-align:center;">i play minecaft</h1>
+        <h4 style="text-align:center;">Programming langs i know:<br>Python<br>html<br></h4>
+        <h4 style="text-align:center;"></h4>
       </section>
     </div>
   </header>
