--- a/client.html
+++ b/client.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#00FFDF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="sus.css">
+  <link rel="stylesheet" href="style.css">
   <title>hecks</title>  
   </style>
 </head>
@@ -18,7 +18,7 @@
       margin: 0;
       font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: white;
-      background-image: url('bac.jpeg');
+      background-image: url('https://loading.io/mod/background/trianglify/index.svg');
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
@@ -94,6 +94,9 @@
   <br>
   <br>
   <br>
-  <h1 class="p1"><a href="https://www.mediafire.com/file/pznayee2y9sh7nh/divineclient.jar/file">divine's private client</a></h1>
-</body>
+  <div class="text">
+      <h1><a href="https://www.mediafire.com/file/pznayee2y9sh7nh/divineclient.jar/file">Divine's Private Client</a></h1>
+      <p style="text-align: center;">Execute this jar file to install it</p>
+  </div>
+    </body>
 </html>
