--- a/discord.html
+++ b/discord.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#00FFDF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="sus.css">
+  <link rel="stylesheet" href="style.css">
   <title>mongus</title>
   
   </style>
