--- a/crash.html
+++ b/crash.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#00FFDF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="sus.css">
+  <link rel="stylesheet" href="style.css">
   <title>mongus</title>
   
   </style>
@@ -57,7 +57,30 @@
         font-size: 36px;
         margin-left: 50px;
     }
-    
+    .text {
+    position: absolute;
+    top: 50%;
+    right: 50%;
+    transform: translate(50%,-50%);
+    color: $text;
+    max-width: 90%;
+    padding: 2em 3em;
+    background: rgba(0, 0, 0, 0.4);
+    text-shadow: 0px 0px 2px #131415;
+    font-family: 'Open Sans', sans-serif;
+  }
+    .text {
+      position: absolute;
+      top: 50%;
+     right: 50%;
+      transform: translate(50%,-50%);
+      color: $text;
+      max-width: 90%;
+      padding: 2em 3em;
+      background: rgba(0, 0, 0, 0.4);
+      text-shadow: 0px 0px 2px #131415;
+      font-family: 'Open Sans', sans-serif;
+  }
     @media screen and (max-height: 450px) {
         .funnynav {padding-top: 15px;}
         .funnynav a {font-size: 18px;}
@@ -89,9 +112,8 @@
   </div>
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
   <header>
-    <div class="container">
-      <a id="a-title">
-        <h2 class="p1">Crashing method: /mv ^(.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.++)$^</h2>
+    <div class="text">
+        <h2>Crashing method: /mv ^(.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.*.++)$^</h2>
       </section>
     </div>
   </header>
