--- a/roblox.html
+++ b/roblox.html
@@ -6,14 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="theme-color" content="#00FFDF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="sus.css">
+  <link rel="stylesheet" href="style.css">
   <title>mongus</title>
   <style>
      body {
       margin: 0;
       font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: white;
-      background-image: url('bac.jpeg');
       background-repeat: no-repeat;
       background-size: cover;
       background-attachment: fixed;
@@ -85,7 +84,7 @@
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
 
   <header>
-    <div class="container">
+    <div class="text">
       <a id="p1">
         <h1 style="color:white">
           <a href="https://grabify.link/6D6ROG">roblox hacks</a>
