--- a/discord.html
+++ b/discord.html
@@ -96,7 +96,8 @@
         <a href="discord.html">Discord stuff</a>
         <a href="crash.html">Crash exploit</a>
         <a href="roblox.html">roblox hacks</a>
-    
+        <a href="login.html">login</a>
+
       </div>
       <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
     <div class="container">
@@ -108,11 +109,14 @@
             <div class="text">
                 <table>
                     <tr>
+                            <h1 style="text-align: center;">join these!</h1>
+                    </tr>
+                    <tr>
                         <td>
                             <h1>duper trooper discord:</h1>
                         </td>
                         <td>
-                            <a href="https://discord.gg/xinabox">https://discord.gg/xinabox</a>
+                           <a href=https://discord.gg/xinabox">https://discord.gg/xinabox</a>
                         </td>
                     </tr>
                     <tr>
