--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <a href="discord.html">Discord stuff</a>
     <a href="crash.html">Crash exploit</a>
     <a href="roblox.html">roblox hacks</a>
+    <a href="login.html">login</a>
   </div>
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
   <header>
