made password werk

--- a/meme-stash.html
+++ b/meme-stash.html
@@ -91,26 +91,8 @@
   <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; </span>
   <header>
     <div class="text">
-    <h2>login</h2><br>    
-    <div class="login">    
-        <form>
-            <label for="pswd">Enter your password: </label>
-            <input type="password" id="pswd">
-            <input type="button" value="Submit" onclick="checkPswd();" />
-        </form>
-        <script type="text/javascript">
-            function checkPswd() {
-                var confirmPassword = "meems";
-                var password = document.getElementById("pswd").value;
-                if (password == confirmPassword) {
-                     window.location="meme-stash.html";
-                }
-                else{
-                    alert("Passwords do not match.");
-                }
-            }
-        </script>   
-      </section>
+        <h1>Divine's Secret Meme Stash</h1>
+        
     </div>
   </header>
 </body>
