--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#00FFDF">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
-  <title>mongus</title>
+  <title>Homepage</title>
   <style>
     #myVideo {
       position: fixed;
@@ -22,8 +22,6 @@
       margin: 0;
       font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: black;
-      background-repeat: no-repeat;
-      background-size: cover;
      }
     
     .sidenav {
@@ -64,7 +62,7 @@
       top: 50%;
       right: 50%;
       transform: translate(50%,-50%);
-      color: $text;
+      color: text;
       max-width: 90%;
       padding: 2em 3em;
       background: rgba(0, 0, 0, 0.4);
