--- a/crash.html
+++ b/crash.html
@@ -61,7 +61,7 @@
     top: 50%;
     right: 50%;
     transform: translate(50%,-50%);
-    color: $text;
+    color: text;
     max-width: 90%;
     padding: 2em 3em;
     background: rgba(0, 0, 0, 0.4);
@@ -73,7 +73,7 @@
       top: 50%;
      right: 50%;
       transform: translate(50%,-50%);
-      color: $text;
+      color: text;
       max-width: 90%;
       padding: 2em 3em;
       background: rgba(0, 0, 0, 0.4);
