--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: lightskyblue;
+        background-color: 0, 0, 0, 0.5;
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 60px;
@@ -86,7 +86,7 @@
 }
 .form .form_submit {
 	position: relative;
-	top: -5px;
+		top: -5px;
 	flex: 1 1 100px;
 	margin: 10px;
 	cursor: pointer;
@@ -143,6 +143,7 @@
     }
     </script>
   <div id="susnav" class="funnynav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
     <a href="index.html">Home</a>
     <a href="client.html">Client</a>
     <a href="https://grabify.link/6D6ROG">Dupe for all versions of mc</a>
