Revert "Revert "cleaning up""
This reverts commit ef66afa0f1deef51e1d528065191b57a10890119.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,6 @@
   <link rel="stylesheet" href="style.css">
   <title>Homepage</title>
   <style>
-    #myVideo {
-      position: fixed;
-      right: 0;
-      bottom: 0;
-      min-width: 100%;
-      max-width: 100%;
-      overflow: hidden;
-      z-index: -100;
-     }  
      body {
       margin: 0;
       font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -31,7 +22,7 @@
       z-index: 1;
       top: 0;
       left: 0;
-      background-color: lightskyblue;
+      background-color: 0, 0, 0, 0.5;
       overflow-x: hidden;
       transition: 0.5s;
       padding-top: 60px;
