--- a/discord.html
+++ b/discord.html
@@ -30,7 +30,7 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: lightskyblue;
+            background-color: 0, 0, 0, 0.5;
             overflow-x: hidden;
             transition: 0.5s;
             padding-top: 60px;
