--- a/client.html
+++ b/client.html
@@ -30,7 +30,7 @@
       z-index: 1;
       top: 0;
       left: 0;
-      background-color: 0, 0, 0, 0.5;
+      background-color: rgba(0, 0, 0, 0.4);
       overflow-x: hidden;
       transition: 0.5s;
       padding-top: 60px;
