--- a/discord.html
+++ b/discord.html
@@ -30,7 +30,7 @@
             z-index: 1;
             top: 0;
             left: 0;
-            background-color: 0, 0, 0, 0.5;
+            background-color: rgba(0, 0, 0, 0.4);
             overflow-x: hidden;
             transition: 0.5s;
             padding-top: 60px;
@@ -66,7 +66,7 @@
             top: 50%;
             right: 50%;
             transform: translate(50%,-50%);
-            color: $text;
+            color: text;
             max-width: 90%;
             padding: 2em 3em;
             background: rgba(0, 0, 0, 0.4);
