--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: 0, 0, 0, 0.5;
+        background-color: rgba(0, 0, 0, 0.4);
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 60px;
@@ -143,11 +143,7 @@
     }
     </script>
   <div id="susnav" class="funnynav">
-<<<<<<< HEAD
 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    <a href="index.html">Home</a>
-=======
-    <a href="index.html">Home</a>
->>>>>>> parent of 420b9ad (Revert "e")
     <a href="client.html">Client</a>
     <a href="https://grabify.link/6D6ROG">Dupe for all versions of mc</a>
     <a href="abt me.html">about me</a>
