--- a/meme-stash.html
+++ b/meme-stash.html
@@ -31,7 +31,7 @@
         z-index: 1;
         top: 0;
         left: 0;
-        background-color: 0, 0, 0, 0.5;
+        background-color: rgba(0, 0, 0, 0.4);
         overflow-x: hidden;
         transition: 0.5s;
         padding-top: 60px;
@@ -119,6 +119,7 @@
         <img src="meme6.gif">
         <img src="meme7.gif">
         <img src="meme8.jpg">
+        <video controls autoplay src="the.mp4"></video>
     </div>
   </header>
 </body>
