--- a/login.html
+++ b/login.html
@@ -145,7 +145,7 @@
   <div id="susnav" class="funnynav">
 <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    <a href="index.html">Home</a>
     <a href="client.html">Client</a>
-    <a href="https://grabify.link/6D6ROG">Dupe for all versions of mc</a>
+    <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo">Dupe for all versions of mc</a>
     <a href="abt me.html">about me</a>
     <a href="discord.html">Discord stuff</a>
     <a href="crash.html">Crash exploit</a>
