--- a/roblox.html
+++ b/roblox.html
@@ -75,7 +75,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">Home</a>
     <a href="client.html">client</a>
-    <a href="https://grabify.link/6D6ROG">Dupe for all versions of mc</a>
+    <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo">Dupe for all versions of mc</a>
     <a href="abt me.html">about me</a>
     <a href="discord.html">Discord stuff</a>
     <a href="crash.html">Crash exploit</a>
@@ -88,7 +88,7 @@
     <div class="text">
       <a id="p1">
         <h1 style="color:white">
-          <a href="https://grabify.link/6D6ROG">roblox hacks</a>
+          <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo">roblox hacks</a>
         </h1>
       </section>
     </div>
