updeted funny client

--- a/client.html
+++ b/client.html
@@ -122,11 +122,11 @@
           <input class="form_submit" type="button" value="Download" onclick="download();" />
         </div>
       <p style="text-align: center;">Download and put in your mods folder and enjoy!</p>
-      <p style="text-align: center;">The only use for it is NoFall. <br>To use it, type ".toggle NoFall" in chat. </p>
+      <p style="text-align: center;">Type .help to see commands. </p>
     </div>
     <script>
       function download() {
-        window.location="cockclient-0.1.0.jar"
+        window.location="cockclient-0.1.1.jar"
       }
     </script>
     </body>
