--- a/spamton.html
+++ b/spamton.html
@@ -8,13 +8,12 @@
     <meta name="theme-color" content="#00FFDF">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
-    <title>BLOCKED LINK</title>
+    <title>[HYPERLINK BLOCKED]</title>
 
     </style>
 </head>
 
 <body data-new-gr-c-s-check-loaded="14.1029.0" data-gr-ext-installed="">
-
     <style>
         .hever:hover {
             font-size: 0;
