--- a/roblox.html
+++ b/roblox.html
@@ -75,7 +75,7 @@
     <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
     <a href="index.html">Home</a>
     <a href="client.html">client</a>
-    <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo">Dupe for all versions of mc</a>
+    <a href="https://www.youtube.com/watch?v=sv-C3ol4GXg">Dupe for all versions of mc</a>
     <a href="abt me.html">about me</a>
     <a href="discord.html">Discord stuff</a>
     <a href="crash.html">Crash exploit</a>
