--- a/abt me.html
+++ b/abt me.html
@@ -80,7 +80,7 @@
   <div id="susnav" class="funnynav">
     <a href="index.html">Home</a>
     <a href="client.html">Client</a>
-    <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo">Dupe for all versions of mc</a>
+    <a href="https://www.youtube.com/watch?v=sv-C3ol4GXg">Dupe for all versions of mc</a>
     <a href="abt me.html">about me</a>
     <a href="discord.html">Discord stuff</a>
     <a href="crash.html">Crash exploit</a>
