--- a/discord.html
+++ b/discord.html
@@ -91,7 +91,7 @@
       <div id="susnav" class="funnynav">
         <a href="index.html">Home</a>
         <a href="client.html">heck client</a>x
-        <a href="https://www.youtube.com/watch?v=QtBDL8EiNZo">dupe for all versions of mc</a>
+        <a href="https://www.youtube.com/watch?v=sv-C3ol4GXg">dupe for all versions of mc</a>
         <a href="abt me.html">about me</a>
         <a href="discord.html">Discord stuff</a>
         <a href="crash.html">Crash exploit</a>
