这是冰淇淋的免费社会信用生成器

--- a/meme-stash.html
+++ b/meme-stash.html
@@ -120,6 +120,7 @@
   <header>
     <div class="text">
         <h1>Divine's Secret Meme Stash</h1>
+        <a href="SocialCredit.html">here's a free social credit generator for bing chhilling 这是冰淇淋的免费社会信用生成器</a>
     </div>
     <br>
     <br>
