--- a/SocialCredit.html
+++ b/SocialCredit.html
@@ -24,7 +24,7 @@
         </div>
         <div>
             <input placeholder="social credit amount to generate 产生的社会信用额度">
-            <button value="generate">geneate 产生!</button>
+            <button onclick="location.href='you-lost-all-your-social-credit.png'" value="generate">geneate 产生!</button>
         </div>
     </div>
 </body>
