--- a/goodbye-social-credit.html
+++ b/goodbye-social-credit.html
@@ -2,5 +2,5 @@
   <audio autoplay>
     <source src=".ogg" type="audio/ogg">
     </audio>
-  <img src="">
+  <img src="8D3733DB-2B2D-412C-8254-17093B776AC9.jpeg">
 </body>
