--- a/goodbye-social-credit.html
+++ b/goodbye-social-credit.html
@@ -1,6 +1,7 @@
 <body>
   <audio autoplay>
-    <source src=".ogg" type="audio/ogg">
+    <source src="yt5s.com-FlightReacts Dolphin Laugh-(128kbps).ogg" type="audio/ogg">
     </audio>
   <img src="8D3733DB-2B2D-412C-8254-17093B776AC9.jpeg">
 </body>
+<!you lost ur social credit u dumb fuck>
