--- a/index-xp.html
+++ b/index-xp.html
@@ -3,7 +3,8 @@
 <link rel="stylesheet" href="https://unpkg.com/xp.css">
 </head>
 <body>
-  <div id="windoze" class="window" style="width: 300px">
+  <div id="windoze">
+  <div class="window" style="width: 300px">
   <div class="title-bar">
     <div class="title-bar-text">A Window With Stuff In It</div>
     <div class="title-bar-controls">
@@ -16,6 +17,7 @@
     <p>Divine's website but just bad lmao</p>
   </div>
 </div>
+  </div>
 <script>
 dragElement(document.getElementById("windoze"));
 
